--- a/functions/package.json
+++ b/functions/package.json
@@ -16,14 +16,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.3.0",
+    "firebase-admin": "^8.9.0",
+    "firebase-functions": "^3.3.0",
     "vimeo": "^2.1.1"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.1.6",
-    "tslint": "^5.12.0",
-    "typescript": "^3.2.2"
+    "firebase-functions-test": "^0.1.7",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.4"
   },
   "private": true
 }
