--- a/vue-ui/package.json
+++ b/vue-ui/package.json
@@ -10,15 +10,23 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.11",
+    "material-components-web": "^4.0.0",
+    "sass-loader": "^8.0.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
+    "@material/button": "^4.0.0",
+    "@material/ripple": "^4.0.0",
     "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-eslint": "^3.12.1",
     "@vue/cli-service": "^4.1.1",
     "babel-eslint": "^10.0.3",
+    "css-loader": "^3.4.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
+    "extract-loader": "^3.1.0",
+    "file-loader": "^5.0.2",
+    "node-sass": "^4.13.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
