--- a/vue-ui/package.json
+++ b/vue-ui/package.json
@@ -12,9 +12,11 @@
     "core-js": "^2.6.11",
     "material-components-web": "^4.0.0",
     "sass-loader": "^8.0.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
+    "@material/layout-grid": "^4.0.0",
     "@material/button": "^4.0.0",
     "@material/ripple": "^4.0.0",
     "@vue/cli-plugin-babel": "^3.12.1",
