--- a/vue-ui/package.json
+++ b/vue-ui/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vimeo/player": "^2.10.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.11",
     "material-components-web": "^4.0.0",
@@ -16,8 +17,8 @@
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@material/layout-grid": "^4.0.0",
     "@material/button": "^4.0.0",
+    "@material/layout-grid": "^4.0.0",
     "@material/ripple": "^4.0.0",
     "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-eslint": "^3.12.1",
@@ -28,7 +29,7 @@
     "eslint-plugin-vue": "^5.2.3",
     "extract-loader": "^3.1.0",
     "file-loader": "^5.0.2",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
