--- a/functions/package.json
+++ b/functions/package.json
@@ -10,10 +10,11 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^0.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^8.9.0",
