--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,23 @@
       "npm --prefix \"$RESOURCE_DIR\" run build"
     ]
   },
-  "hosting": {
+  "hosting": [{
+    "target": "admin",
+    "public": "./admin/dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
+  {
+    "target": "public",
     "public": "./gfilms-ui/dist",
     "ignore": [
       "firebase.json",
@@ -22,5 +38,20 @@
         "destination": "/index.html"
       }
     ]
-  }
+  },
+  {
+    "target": "timetomycutie",
+    "public": "./cutie/dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }]
 }
