--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^7.23.0",
     "firebase-admin": "^8.9.0",
     "firebase-functions": "^3.3.0",
     "vimeo": "^2.1.1"
