--- a/admin/package.json
+++ b/admin/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "0.19.0",
     "core-js": "^3.6.5",
+    "tiptap": "^1.30.0",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0"
   },
